--- a/css/base.css
+++ b/css/base.css
@@ -47,7 +47,7 @@ body{
 }
 
 #generations{
-    background-color: var(--primary-color);
+
 }
 
 #generations ul{
@@ -88,13 +88,31 @@ main h1{
     text-align: center;
 }
 
-.type, .pokemon{
-    margin: 2rem;
-    width: 350px;
+main h1{
+    margin: 1rem;
 }
 
-.type img, .pokemon img{
-    width: 100%;
+.type, .pokemon{
+    margin: 2rem;
+    width: 200px;
+    border: 1px outset rgb(226, 226, 226);
+    box-shadow: 0 4px 8px 0 rgba(160, 60, 60, 0.767), 0 6px 20px 0 rgba(138, 71, 71, 0.521);
+    padding-bottom: 2rem;
+    border-radius: 8px;
+    background-color:rgba(133, 13, 13, 0.068);
+}
+
+.type img{
+    width: 40%;
+}
+
+.pokemon img{
+    width: 80%;
+}
+
+.type h2, .pokemon h2{
+    margin: 1rem auto;
+    color:  black;
 }
 
 .type a, .pokemon a{
@@ -114,6 +132,7 @@ main h1{
     color: white;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 2.5rem;
 }
 
 .card img{
@@ -196,6 +215,24 @@ main h1{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 0 auto;
 
+}
+
+footer{
+    display: flex;
+    background-color: var(--secondary-color);
+    color: yellow;
+    align-items: center;
+    padding-left: 2rem;
+    padding-top: 1rem;
+}
+
+footer p{
+    padding-left: 1rem;
+    font-size: 1.2rem;
+}
+
+footer img{
+    width: 3%;
 }
 
 .grass{
