--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,26 @@
     --box-shadow: 0 4px 8px 0 rgba(160, 60, 60, 0.767), 0 6px 20px 0 rgba(138, 71, 71, 0.521);
 }
 
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+.oxygen-light {
+    font-family: "Oxygen", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+
 *{
     margin: 0;
     padding: 0;
@@ -14,6 +34,12 @@
 body{
     max-width: 1400px;
     margin: 0 auto;
+    font-family: "Oxygen", sans-serif;
+    background-color: none;
+}
+
+h2, h1{
+    font-family: "Quicksand";
 }
 
 .headerSection{
@@ -58,6 +84,8 @@ ul li{
     border: 4px solid var(--tertiary-color);
     border-radius: 10px;
     text-align: center;
+    background-color: #BB85AB;
+    box-shadow: var(--box-shadow);
 }
 
 ul img{
@@ -291,6 +319,8 @@ footer img{
     border-radius: 10px;
     background-color: var(--secondary-color);
     color: yellow;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
 
 form{
@@ -320,6 +350,71 @@ form legend{
 
 form fieldset{
     background-color: rgba(245, 234, 135, 0.801);
+}
+
+#checkSubmit{
+    display: block;
+    margin: 2rem auto;
+    font-size: 1rem;
+    padding: 0.8rem;
+    background-color: rgb(255, 203, 5);
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#error-catch{
+    margin:  0 auto;
+    margin-top: 1rem;
+    width: 30%;
+    font-size: 1.3rem;
+    background-color: rgb(255, 203, 5);
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+#error-catch span{
+    color: var(--secondary-color);
+    background-color: red;
+    color: white;
+    padding: 0 0.25rem;
+}
+
+#thanksMess{
+    margin: 4rem auto;
+    text-align: center;
+}
+
+#thanksMess h1{
+    width: 100%;
+    color:#072E74;
+    margin: 2rem auto;
+    font-size: 2rem;
+}
+
+#thanksMess p{
+    margin: 1rem 1rem 5rem 1rem;
+    font-size: 1.3rem;
+}
+
+#addToBag{
+    padding: 1.2rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    font-weight: bolder;
+    cursor: pointer;
+    animation: shake 0.5s;
+    animation-iteration-count: 10;
+}
+
+.erase{
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    justify-content: end;
+    margin-right: 1rem;
+    cursor: pointer;
 }
 
 .grass{
